# mlex_latent_explorer

./: .dockerignore  .env  .env.example  .gitconfig  .gitignore  Dockerfile  Dockerfile_arroyo  Dockerfile_arroyo_xps  README.md  arroyo_settings.yml  basic_auth.ini.example  docker-compose.yml  frontend.py  gunicorn_config.py  pyproject.toml  settings.yaml
.github/workflows/: publish_docker.yml  publish_docker_arroyo.yml  publish_docker_arroyoxps.yml  python-app.yml
conf/kvrocks/: kvrocks.conf
data/: pca.npz  pca_3d.npz  umap.npz  umap_3d.npz
data copy/: .file_manager_vars.pkl
docker/: Dockerfile  requirements.txt
live_operator_example/: dimred_wrapper.py  lse_operator.py  lse_operator_mlflow.py  mlflow_config.yaml  model_simple_auto.py  neural_dimred_wrapper.py  neural_umap_wrapper.py  save_mlflow_wrapper.py  tiled_utils.py  umap_wrapper.py  vae_wrapper.py  vit_wrapper.py
simulator/: data_simulator.py  data_simulator_mnist.py  tiled_ingestor_mnist.py  websocket.py  websocket_listener.py  websocket_server.py  websocket_simulator.py
src/: app_layout.py  frontend.py  ids.py  latentxp_utils.py  new_app_layout.py  templates.py  utils_prefect.py  utils_tiled.py
src/arroyo/: app.py  operator.py  publisher.py  reducer.py
src/arroyo_reduction/: app.py  app_xps.py  operator.py  publisher.py  redis_model_store.py  reducer.py  schemas.py  tiled_local_image_publisher.py  tiled_results_publisher.py  vector_save.py  xps_tiled_local_image_publisher.py  xps_websocket_listener.py
src/assets/: clientside.js  datepicker_style.css  default_models.json  lse-style.css  sample_models.json  segmentation-style.css
src/callbacks/: display.py  execute.py  experiment_replay.py  infrastructure_check.py  live_mode.py
src/components/: header.py  infrastructure.py  main_display.py  model_selection_dialog.py  sidebar.py
src/test/: conftest.py  layout_test.py  test_mlflow_client.py  test_model_callbacks.py  test_redis_store.py  test_reducer.py  test_utils.py  test_vector_save.py
src/utils/: data_utils.py  job_utils.py  mask_utils.py  mlflow_utils.py  model_utils.py  plot_utils.py  prefect.py
