[project]
name = "mlex_latent_explorer"
version = "0.0.1"
authors = [
    { name="Runbo Jiang", email="rjiang2@lbl.gov"}
]
description = "A web app to visualize latent vectors in 2D or 3D, supporting PCA and UMAP for dimension reduction."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "dash==2.9.3",
    "dash-core-components==2.0.0",
    "dash-bootstrap-components==1.0.2",
    "dash-html-components==2.0.0",
    "dash-iconify==0.1.2",
    "plotly==5.14.1",
    "scikit-learn==1.3.0",
    "dash-uploader==0.6.0",
    "requests==2.26.0",
    "pyarrow==11.0.0",
    "diskcache==5.6.3",
    "dash_component_editor@git+https://github.com/mlexchange/mlex_dash_component_editor",
    "mlex_file_manager@git+https://github.com/mlexchange/mlex_file_manager",
    "Pillow",
    "pandas",
    "numpy",
    "python-dotenv",
    "prefect-client==2.14.21"
]

[project.optional-dependencies]
# These are required for developing the package (running the tests, building
# the documentation) but not necessarily required for _using_ it.
dev = [
    "dash[testing]",
    "flake8",
    "pre-commit",
    "pytest-mock",
    "tiled[all]",
]

[project.urls]
Homepage = "https://github.com/mlexchange/mlex_latent_explorer"
Issues = "https://github.com/mlexchange/mlex_latent_explorer/issues/"

[tool.isort]
profile = "black"
