[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src/**/*"]

[tool.hatch.metadata]
allow-direct-references = true


[project]
name = "latent_space_explorer"
version = "0.1.0"
description = "Latent Space Explorer"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"

dependencies = [
    "dash==2.9.3",
    "dash-core-components==2.0.0",
    "dash-bootstrap-components>=1.1.0",
    "dash-extensions==0.0.71",
    "dash-iconify==0.1.2",
    "dask>=2024.3.0",
    "dask-expr==1.0.10",
    "flask==3.0.0",
    "Flask-Caching",
    "kaleido",
    "humanhash3",
    "mlex_file_manager@git+https://github.com/mlexchange/mlex_file_manager.git",
    "mlex_utils[all]@git+https://github.com/mlexchange/mlex_utils.git",
    "numpy<2.0.0",
    "pandas",
    "Pillow",
    "plotly>=5.21.0,<6.0.0",
    "plotly-express",
    "pyFAI==2025.3.0",
    "python-dotenv",
    "pyarrow>=14.0.1",
    "requests",
    "diskcache==5.6.3",
    "scikit-learn==1.3.0",
    "redis",
    "mlflow==2.22.0" 
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "flake8==7.0.0",
    "isort==5.13.2",
    "pre-commit==3.6.2",
    "pytest==8.1.1",
]

simulator = [
    "websocket",
    "aio-pika"
]

arroyo = [
    "arroyopy<=1.0.0",
    "arroyosas @ git+https://github.com/als-computing/arroyosas.git@move_lse",
    "dynaconf",
    "msgpack",
    "redis",
    "typer",
    "websockets",
    "zarr",
    "scikit-learn==1.3.0",
    "torch>=2.0.0",
    "torchvision==0.17.2",
    "transformers==4.47.1",
    "umap-learn",
    "joblib==1.4.2"
]